# advent-of-code

./: .gitignore  Dockerfile  README.md  day1.py  day2.py  docker-compose.python.yml  docker-compose.typescript.yml  docker-compose.yml  fetch_puzzle_input.sh  go.mod  requirements.txt
python/: README.md  bar.txt  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  pyproject.toml  requirements.txt  test_all.py  test_utils.py  utils.py
python/_2020/: __init__.py  day1.py  day2.py  test_all.py
python/_2021/: __init__.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  test_all.py
python/_2022/: __init__.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  test_day15.py  test_day20.py  test_day25.py
python/_2022/stats/: leaderboard.json  leaderboard.py
python/_2022/visualisations/: day14sand.py  day5columns.py  day8trees.py  day9rope.py  game.py  menu.py
python/tests/: test_all.py  test_puzzles.py  test_utils.py
python/utils/: __init__.py  data_structures.py  fetch_puzzle_inputs.py  loading.py  maths.py  performance.py  utils.py
(+398 files in other folders)
