[project]
name = "advent-of-code"
version = "0.1.0"
description = "Python solutions for Advent of Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pytest>=9.0.1",
    "pytest-timeout>=2.4.0",
    "redbreast>=1.1.5",
    "robingame>=0.0.12,<0.1.0",
    "ruff>=0.14.5",
    "types-aiofiles>=25.1.0.20251011",
]

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
